prepare for release (fix javadoc)